Fix issue where footer was collapsing on mobile view

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,7 @@
 #footer {
 	display: flex;
 	justify-content: center;
-	padding: 20px;
+	padding: 20px 0 30px;
 }
 
 #footer a {
